--- a/_GetExtras/Get Handheld Companion/Handheld Companion/User/AppData/Local/HandheldCompanion/user.config
+++ b/_GetExtras/Get Handheld Companion/Handheld Companion/User/AppData/Local/HandheldCompanion/user.config
@@ -26,7 +26,7 @@
     <setting name="SensorPlacement" serializeAs="String" value="0" />
     <setting name="QuicktoolsBackdrop" serializeAs="String" value="1" />
     <setting name="MainWindowLeft" serializeAs="String" value="0" />
-    <setting name="QuickToolsHeight" serializeAs="String" value="696" />
+    <setting name="QuickToolsHeight" serializeAs="String" value="616" />
     <setting name="ConfigurableTDPOverrideUp" serializeAs="String" value="0" />
     <setting name="DSUEnabled" serializeAs="String" value="True" />
     <setting name="MainWindowState" serializeAs="String" value="1" />
@@ -43,7 +43,7 @@
     <setting name="OverlayTrackpadsSize" serializeAs="String" value="250" />
     <setting name="RunAtStartup" serializeAs="String" value="False" />
     <setting name="FirstStart" serializeAs="String" value="False" />
-    <setting name="HIDInstancePath" serializeAs="String" value="" />
+    <setting name="HIDInstancePath" serializeAs="String" value="USB\VID_28DE&amp;PID_1205&amp;MI_02\7&amp;197106C2&amp;0&amp;0002" />
     <setting name="HIDmode" serializeAs="String" value="0" />
     <setting name="QuickToolsAutoHide" serializeAs="String" value="False" />
     <setting name="OverlayControllerRestingYaw" serializeAs="String" value="0" />
